[package]
name = "libclic-sys"
version = "0.1.0"
authors = ["Diogo Andre <das.dias6@gmail.com>"]
build = "build.rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"

[build-dependencies]
cc = {version = "*" , features = ["parallel"]}
pkg-config = "*"